[gd_scene load_steps=3 format=3 uid="uid://bpymikexc84ol"]

[ext_resource type="Script" path="res://ui/scenes/item_description_dialog.gd" id="1_33bmt"]
[ext_resource type="PackedScene" uid="uid://cubf04keij220" path="res://ui/scenes/action_button.tscn" id="2_hqd78"]

[node name="ItemDescriptionDialog" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_33bmt")
list_name = "Item Actions"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 280.0

[node name="ButtonContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/ButtonContainer"]
layout_mode = 2
text = "Entities"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/ButtonContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/ButtonContainer"]
layout_mode = 2

[node name="Attack" parent="Panel/ButtonContainer" instance=ExtResource("2_hqd78")]
layout_mode = 2
